--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .parent {
     display: grid;
-
+    margin:auto;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, fit-content);
     grid-column-gap: 10px;
